<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id = "@+id/RHE"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:background="#C35817"
         android:padding="10dp">

     <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton81"
             android:contentDescription="@string/r8c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/w"/>
         <ImageButton
             android:id="@+id/imageButton82"
             android:contentDescription="@string/r8c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/e"/>
         <ImageButton
             android:id="@+id/imageButton83"
             android:contentDescription="@string/r8c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/l"/>
         <ImageButton
             android:id="@+id/imageButton84"
             android:contentDescription="@string/r8c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/c"/>
         <ImageButton
             android:id="@+id/imageButton85"
             android:contentDescription="@string/r8c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/o"/>
         <ImageButton
             android:id="@+id/imageButton86"
             android:contentDescription="@string/r8c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/m"/>
         <ImageButton
             android:id="@+id/imageButton87"
             android:contentDescription="@string/r8c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/e2"/>
         <ImageButton
             android:id="@+id/imageButton88"
             android:contentDescription="@string/r8c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
     </TableRow>
	 <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton71"
             android:contentDescription="@string/r7c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton72"
             android:contentDescription="@string/r7c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton73"
             android:contentDescription="@string/r7c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton74"
             android:contentDescription="@string/r7c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton75"
             android:contentDescription="@string/r7c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton76"
             android:contentDescription="@string/r7c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton77"
             android:contentDescription="@string/r7c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton78"
             android:contentDescription="@string/r7c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton61"
             android:contentDescription="@string/r6c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton62"
             android:contentDescription="@string/r6c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton63"
             android:contentDescription="@string/r6c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton64"
             android:contentDescription="@string/r6c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/t"/>
         <ImageButton
             android:id="@+id/imageButton65"
             android:contentDescription="@string/r6c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/o"/>
         <ImageButton
             android:id="@+id/imageButton66"
             android:contentDescription="@string/r6c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton67"
             android:contentDescription="@string/r6c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton68"
             android:contentDescription="@string/r6c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
     </TableRow>
	 <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton51"
             android:contentDescription="@string/r5c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton52"
             android:contentDescription="@string/r5c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton53"
             android:contentDescription="@string/r5c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton54"
             android:contentDescription="@string/r5c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton55"
             android:contentDescription="@string/r5c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton56"
             android:contentDescription="@string/r5c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton57"
             android:contentDescription="@string/r5c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton58"
             android:contentDescription="@string/r5c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton41"
             android:contentDescription="@string/r4c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton42"
             android:contentDescription="@string/r4c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton43"
             android:contentDescription="@string/r4c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton44"
             android:contentDescription="@string/r4c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton45"
             android:contentDescription="@string/r4c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/l"/>
         <ImageButton
             android:id="@+id/imageButton46"
             android:contentDescription="@string/r4c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton47"
             android:contentDescription="@string/r4c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton48"
             android:contentDescription="@string/r4c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
     </TableRow>
	 <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton31"
             android:contentDescription="@string/r3c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton32"
             android:contentDescription="@string/r3c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton33"
             android:contentDescription="@string/r3c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/c"/>
         <ImageButton
             android:id="@+id/imageButton34"
             android:contentDescription="@string/r3c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/h"/>
         <ImageButton
             android:id="@+id/imageButton35"
             android:contentDescription="@string/r3c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/e1"/>
         <ImageButton
             android:id="@+id/imageButton36"
             android:contentDescription="@string/r3c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton37"
             android:contentDescription="@string/r3c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton38"
             android:contentDescription="@string/r3c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton21"
             android:contentDescription="@string/r2c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton22"
             android:contentDescription="@string/r2c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton23"
             android:contentDescription="@string/r2c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton24"
             android:contentDescription="@string/r2c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton25"
             android:contentDescription="@string/r2c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton26"
             android:contentDescription="@string/r2c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/s2"/>
         <ImageButton
             android:id="@+id/imageButton27"
             android:contentDescription="@string/r2c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton28"
             android:contentDescription="@string/r2c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
     </TableRow>
	 <TableRow android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/imageButton11"
             android:contentDescription="@string/r1c1"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton12"
             android:contentDescription="@string/r1c2"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton13"
             android:contentDescription="@string/r1c3"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton14"
             android:contentDescription="@string/r1c4"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton15"
             android:contentDescription="@string/r1c5"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/black"/>
         <ImageButton
             android:id="@+id/imageButton16"
             android:contentDescription="@string/r1c6"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
         <ImageButton
             android:id="@+id/imageButton17"
             android:contentDescription="@string/r1c7"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/s1"/>
         <ImageButton
             android:id="@+id/imageButton18"
             android:contentDescription="@string/r1c8"
             android:layout_height="37dp"
             android:layout_width="37dp"
             android:src="@drawable/white"/>
     </TableRow>
     
     <Button
	     android:id="@+id/button_play"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/play" />
     <Button
	     android:id="@+id/button_replay"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/replay" />
     <Button
	     android:id="@+id/button_credit"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/credit" />
</TableLayout>